--- a/fanspole/Base.lproj/Main.storyboard
+++ b/fanspole/Base.lproj/Main.storyboard
@@ -64,9 +64,6 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="169.5" height="24"/>
                                                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <state key="normal" image="ic_local_atm"/>
-                                                            <connections>
-                                                                <action selector="leagueButton:" destination="uMo-lX-bGT" eventType="touchUpInside" id="Ew1-u7-ZNQ"/>
-                                                            </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="POH-5e-XIw">
                                                             <rect key="frame" x="169.5" y="0.0" width="169.5" height="24"/>
@@ -74,7 +71,7 @@
                                                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <state key="normal" image="ic_format_list_numbered"/>
                                                             <connections>
-                                                                <action selector="leaderboardButton:" destination="uMo-lX-bGT" eventType="touchUpInside" id="NfJ-jc-eV7"/>
+                                                                <segue destination="8rJ-Kc-sve" kind="show" identifier="leaderboardSegue" id="jbo-VB-fP9"/>
                                                             </connections>
                                                         </button>
                                                     </subviews>
@@ -161,6 +158,7 @@
                                             <outlet property="eventTeams" destination="2uf-FV-dK1" id="OYF-m6-zZq"/>
                                             <outlet property="eventTime" destination="lCL-Oo-j2m" id="lhc-bS-kXf"/>
                                             <outlet property="eventTitle" destination="BmW-j9-K6m" id="8FU-th-Z5n"/>
+                                            <outlet property="leaderboardButton" destination="POH-5e-XIw" id="bGW-7I-Jav"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -186,7 +184,7 @@
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="LeaderboardController" customModule="fanspole" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="leaderboardVC" id="8rJ-Kc-sve" customClass="LeaderboardController" customModule="fanspole" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
@@ -328,4 +326,7 @@
         <image name="ic_local_atm" width="24" height="24"/>
         <image name="second" width="30" height="30"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="jbo-VB-fP9"/>
+    </inferredMetricsTieBreakers>
 </document>
