--- a/fanspole/Base.lproj/Main.storyboard
+++ b/fanspole/Base.lproj/Main.storyboard
@@ -13,17 +13,56 @@
         <!--Home Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="HomeController" customModule="fanspole" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="9pv-A4-QxB" customClass="HomeController" customModule="fanspole" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hh5-3g-xxR">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="6G5-uj-CS4"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Qo3-2h-P7R">
+                                    <size key="itemSize" width="114" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="homeMenuCellId" id="TjX-HM-D2w" customClass="HomeMenuCell" customModule="fanspole" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="114" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="114" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Live" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JL3-d6-bwo">
+                                                    <rect key="frame" x="0.0" y="0.0" width="114" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="JL3-d6-bwo" firstAttribute="top" secondItem="TjX-HM-D2w" secondAttribute="top" id="EcB-df-kZp"/>
+                                            <constraint firstItem="JL3-d6-bwo" firstAttribute="leading" secondItem="TjX-HM-D2w" secondAttribute="leading" id="RBP-NG-B20"/>
+                                            <constraint firstAttribute="bottom" secondItem="JL3-d6-bwo" secondAttribute="bottom" id="tCX-tQ-Gef"/>
+                                            <constraint firstAttribute="trailing" secondItem="JL3-d6-bwo" secondAttribute="trailing" id="ybT-9p-WpS"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="homeMenuCellLabel" destination="JL3-d6-bwo" id="aRv-Hx-s07"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ru4-eW-CCl">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="50" width="375" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LLh-ab-hAB">
                                     <size key="itemSize" width="375" height="195"/>
@@ -102,8 +141,8 @@
                                                         <constraint firstAttribute="width" constant="40" id="FQf-HD-cQE"/>
                                                     </constraints>
                                                 </imageView>
-                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N96-sZ-aOf">
-                                                    <rect key="frame" x="0.0" y="92" width="375" height="7"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N96-sZ-aOf">
+                                                    <rect key="frame" x="0.0" y="100.5" width="375" height="1"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="nvl-46-x4A"/>
@@ -168,18 +207,22 @@
                         <constraints>
                             <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="Ru4-eW-CCl" secondAttribute="bottom" id="0B3-yc-olR"/>
                             <constraint firstAttribute="trailing" secondItem="Ru4-eW-CCl" secondAttribute="trailing" id="2BS-Pc-D5K"/>
+                            <constraint firstItem="hh5-3g-xxR" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="9ac-8L-d0V"/>
+                            <constraint firstAttribute="trailing" secondItem="hh5-3g-xxR" secondAttribute="trailing" id="BI9-Xe-dRW"/>
+                            <constraint firstItem="hh5-3g-xxR" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="FwN-yH-iRU"/>
                             <constraint firstItem="Ru4-eW-CCl" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="bTl-HG-PPB"/>
-                            <constraint firstItem="Ru4-eW-CCl" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="dpW-MY-vLH"/>
+                            <constraint firstItem="Ru4-eW-CCl" firstAttribute="top" secondItem="hh5-3g-xxR" secondAttribute="bottom" id="xaJ-zr-WGF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xaw-P7-Vg8"/>
                     <connections>
                         <outlet property="eventCollectionView" destination="Ru4-eW-CCl" id="ajf-Yk-bBh"/>
+                        <outlet property="homeMenuCollectionView" destination="hh5-3g-xxR" id="eh3-YJ-FeB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1152.8" y="-232.53373313343329"/>
+            <point key="canvasLocation" x="1152.8" y="-210.04497751124438"/>
         </scene>
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
@@ -190,18 +233,18 @@
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="83" y="313" width="209.5" height="41.5"/>
+                                <rect key="frame" x="83" y="281" width="209.5" height="41.5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by SecondViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDk-cv-Gan">
-                                <rect key="frame" x="80" y="362.5" width="215" height="17"/>
+                                <rect key="frame" x="80" y="330.5" width="215" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -306,7 +349,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="faa-SA-Ql5" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZHk-8o-oeL">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="ZHk-8o-oeL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
